# Network_Project

./: README.md
docs/: group_info__4a_2.txt  podzial_zadan__4a_2.ods  uml__4a_2.txt
project_netsim/: CMakeLists.txt
project_netsim/include/: DataTypes.hpp  IO.hpp  Simulate.hpp
project_netsim/include/Factory_Package/: Factory.hpp  NodeCollection.hpp
project_netsim/include/Nodes/: IPackageReceiver.hpp  PackageSender.hpp  Ramp.hpp  ReceiverPreferences.hpp  Storehouse.hpp  Worker.hpp
project_netsim/include/Report_Generation/: IReportNotifier.hpp  IntervalReportNotifier.hpp  Reporting.hpp  SpecificTurnsReportNotifier.hpp
project_netsim/include/Storage/: IPackageQueue.hpp  IPackageStockpile.hpp  Package.hpp  PackageQueue.hpp
project_netsim/src/: IO.cpp  Simulate.cpp
project_netsim/src/Factory_Package/: Factory.cpp  NodeCollection.cpp
project_netsim/src/Nodes/: PackageSender.cpp  Ramp.cpp  ReceiverPreferences.cpp  Storehouse.cpp  Worker.cpp
project_netsim/src/Report_Generation/: IntervalReportNotifier.cpp  Reporting.cpp  SpecificTurnsReportNotifier.cpp
project_netsim/src/Storage/: Package.cpp  PackageQueue.cpp
project_netsim/test/: main_test.cpp  reportSimulationTest.txt  reportStructureTest.txt  saveTest.txt  testFactory.cpp  testGenerateSimulationTurnReportToFile.cpp  testGenerateStructureReportToFile.cpp  testIO.cpp  testIntervalReportNotifier.cpp  testNodeCollection.cpp  testPackage.cpp  testPackageQueue.cpp  testPackageSender.cpp  testRamp.cpp  testReceiverPreferences.cpp  testSimulate.cpp  testSpecificTurnsReportNotifier.cpp  testStorehouse.cpp  testWorker.cpp
